--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-use-websocket": "^4.2.0",
+    "recoil": "^0.7.4",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
